# execution

./: .codespellignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Makefile  NOTICE  README.md  affine_8hpp_source.html  affine__on_8hpp_source.html  allocator__aware__move_8hpp_source.html  allocator__of_8hpp_source.html  almost__scheduler_8hpp_source.html  annotated.html  annotated_dup.js  apply__sender_8hpp_source.html  as__awaitable_8hpp_source.html  as__tuple_8hpp_source.html  associate_8hpp_source.html  atomic__intrusive__stack_8hpp_source.html  await__result__type_8hpp_source.html  awaitable__sender_8hpp_source.html  basic__operation_8hpp_source.html  basic__receiver_8hpp_source.html  basic__sender_8hpp_source.html  basic__state_8hpp_source.html  bulk_8hpp_source.html  class__type_8hpp_source.html  classbeman_1_1execution_1_1run__loop-members.html  classbeman_1_1execution_1_1run__loop.html  classes.html  classtst_1_1timer_1_1when__done__sender.html  common_8hpp_source.html  common__domain_8hpp_source.html  compl__domain_8hpp_source.html  completion_8hpp_source.html  completion__domain_8hpp_source.html  completion__signature_8hpp_source.html  completion__signatures_8hpp_source.html  completion__signatures__for_8hpp_source.html  (+312 more)
.github/: CODEOWNERS
.github/workflows/: ci_tests.yml
cmake/: CMakeUserPresets.json  Config.cmake.in  README.md  appleclang-toolchain.cmake  beman-install-library-config-package.cmake  beman-install-library-config.cmake  beman-install-library.cmake  beman-install-project-targets.cmake  beman.execution-config.cmake.in  cxx-modules-rules.cmake  gnu-toolchain.cmake  llvm-toolchain.cmake  msvc-toolchain.cmake  prelude.cmake  use-fetch-content.cmake
cmake/presets/: CMakeDarwinPresets.json  CMakeGenericPresets.json  CMakeLinuxPresets.json
docs/: contributing.md  cxx_modules_cheatsheeet.md  dependency.txt  doxygen-awesome-darkmode-toggle.js  doxygen-awesome.css  intro-examples.md  modules.md  overview.md  resources.md  tutorial.mds
docs/code/: CMakeLists.txt  tst-basic-timer.cpp  tst-config.hpp  tst-repeat_effect_until.hpp  tst-sync_wait.hpp  tst-timer.hpp  tst.hpp
examples/: CMakeLists.txt  allocator.cpp  inspect.cpp  intro-1-hello-world.cpp  intro-2-hello-async.cpp  intro-5-consumer.cpp  intro-timer.hpp  just_stopped.cpp  modules.cpp  sender-demo.cpp  stackoverflow.cpp  stop_token.cpp  stopping.cpp  suspend_never.cpp  tst-basic-timer.cpp  tst.hpp  when_all-cancel.cpp
include/beman/execution/: execution.hpp  functional.hpp  stop_token.hpp  task.hpp
include/beman/execution/detail/: affine.hpp  affine_on.hpp  allocator_aware_move.hpp  allocator_of.hpp  almost_scheduler.hpp  apply_sender.hpp  as_awaitable.hpp  as_except_ptr.hpp  as_tuple.hpp  associate.hpp  async_scope_token.hpp  atomic_intrusive_stack.hpp  await_result_type.hpp  await_suspend_result.hpp  awaitable_sender.hpp  basic_operation.hpp  basic_receiver.hpp  basic_sender.hpp  basic_state.hpp  bulk.hpp  call_result_t.hpp  callable.hpp  check_type_alias_exist.hpp  child_type.hpp  class_type.hpp  common.hpp  completion.hpp  completion_domain.hpp  completion_signature.hpp  completion_signatures.hpp  completion_signatures_for.hpp  completion_signatures_of_t.hpp  completion_tag.hpp  config.hpp  connect.hpp  connect_all.hpp  connect_all_result.hpp  connect_awaitable.hpp  (+158 more)
include/beman/execution26/: execution.hpp
infra/cmake/: appleclang-toolchain.cmake  gnu-toolchain.cmake  llvm-toolchain.cmake  msvc-toolchain.cmake
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_4.js  all_5.js  all_7.js  all_8.js  all_a.js  all_d.js  all_e.js  all_f.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_e.js  concepts_0.js  functions_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
src/beman/execution/: CMakeLists.txt  affine_on.cppm  allocator_aware_move.cppm  almost_scheduler.cppm  apply_sender.cppm  as_awaitable.cppm  as_except_ptr.cppm  as_tuple.cppm  associate.cppm  atomic_intrusive_stack.cppm  await_result_type.cppm  await_suspend_result.cppm  awaitable_sender.cppm  basic_operation.cppm  basic_receiver.cppm  basic_sender.cppm  basic_state.cppm  beman.execution-config.cmake.in  bulk.cppm  call_result_t.cppm  callable.cppm  check_type_alias_exist.cppm  child_type.cppm  class_type.cppm  completion_domain.cppm  completion_signature.cppm  completion_signatures.cppm  completion_signatures_for.cppm  completion_signatures_of_t.cppm  completion_tag.cppm  connect.cppm  connect_all.cppm  connect_all_result.cppm  connect_awaitable.cppm  connect_result_t.cppm  continues_on.cppm  counting_scope.cppm  counting_scope_base.cppm  counting_scope_join.cppm  decayed_same_as.cppm  (+133 more)
tests/beman/execution/: CMakeLists.txt  allocator-requirements-general.test.cpp  exec-affine-on.test.cpp  exec-associate.test.cpp  exec-awaitable.test.cpp  exec-bulk.test.cpp  exec-connect.test.cpp  exec-continues-on.test.cpp  exec-dependent-sender.test.cpp  exec-domain-default.test.cpp  exec-env.test.cpp  exec-fwd-env.test.cpp  exec-general.test.cpp  exec-get-allocator.test.cpp  exec-get-compl-domain.test.cpp  exec-get-compl-sched.test.cpp  exec-get-delegation-scheduler.test.cpp  exec-get-domain.test.cpp  exec-get-env.test.cpp  exec-get-scheduler.test.cpp  exec-get-start-scheduler.test.cpp  exec-get-stop-token.test.cpp  exec-getcomplsigs.test.cpp  exec-into-variant.test.cpp  exec-just.test.cpp  exec-let.test.cpp  exec-nest.test.cpp  exec-on.test.cpp  exec-opstate-start.test.cpp  exec-opstate.test.cpp  exec-parallel-scheduler.test.cpp  exec-prop.test.cpp  exec-queries-expos.test.cpp  exec-read-env.test.cpp  exec-recv-concepts.test.cpp  exec-recv.test.cpp  exec-run-loop-general.test.cpp  exec-run-loop-types.test.cpp  exec-sched.test.cpp  exec-schedule-from.test.cpp  (+71 more)
tests/beman/execution/include/test/: completion_test.hpp  execution.hpp  inline_scheduler.hpp  optional_sender.hpp  stop_token.hpp  thread_pool.hpp  ut.hpp
(+15 files in other folders)
